# cubek

./: Cargo.toml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: attention.rs  conv2d.rs  matmul.rs  memcpy_async.rs  reduce.rs  unary.rs
crates/cubek/: Cargo.toml
crates/cubek-attention/: Cargo.toml
crates/cubek-attention/src/: lib.rs
crates/cubek-attention/src/components/: args.rs  problem.rs
crates/cubek-attention/src/components/batch/: base.rs  entry_point.rs  mod.rs
crates/cubek-attention/src/components/batch/simple/: attention.rs  config.rs  mod.rs  setup.rs
crates/cubek-attention/src/components/global/: base.rs
crates/cubek-attention/src/components/global/simple/: attention.rs  setup.rs
crates/cubek-attention/src/components/stage/: base.rs  partition_attention.rs
crates/cubek-attention/src/components/stage/partition/: accumulator.rs  key_value.rs  mask.rs  query.rs  softmax.rs
crates/cubek-attention/src/components/stage/plane/: setup.rs
crates/cubek-attention/src/components/stage/tile_ops/: accumulator.rs  key_value.rs  mask.rs  query.rs
crates/cubek-attention/src/components/stage/unit/: setup.rs
crates/cubek-attention/src/components/tile/: base.rs
crates/cubek-attention/src/components/tile/accelerated/: attention.rs  setup.rs
crates/cubek-attention/src/components/tile/unit_register/: attention.rs  setup.rs
crates/cubek-attention/src/definition/: base.rs  line_size.rs
crates/cubek-attention/src/launch/: args.rs  base.rs  blueprint.rs  definition.rs  error.rs  hypercube.rs  line_size.rs  mod.rs  spec.rs
crates/cubek-attention/src/routines/: base.rs  blackbox_accelerated.rs  mod.rs  unit.rs
crates/cubek-attention/src/tests/: attention_test_launcher.rs  test_utils.rs
crates/cubek-attention/tests/: lib.rs
crates/cubek-attention/tests/attention/: launcher.rs  mod.rs  reference.rs  tests.rs  utils.rs
crates/cubek-attention/tests/suite/: attention_test_launcher.rs  cpu_reference.rs  mod.rs  test_utils.rs
crates/cubek-attention/tests/suite/macros/: mod.rs  suite.rs
crates/cubek-convolution/: Cargo.toml
crates/cubek-convolution/src/: launch.rs  lib.rs
crates/cubek-convolution/src/components/: config.rs  problem.rs
crates/cubek-convolution/src/components/global/: args.rs  entry_point.rs  mod.rs
crates/cubek-convolution/src/components/global/layout/: im2col.rs  mod.rs  out.rs  tma_im2col.rs  tma_out_grad.rs  tma_weight.rs  (+2 more)
crates/cubek-convolution/src/kernels/: launch.rs  mod.rs
crates/cubek-convolution/src/kernels/backward_data/: launch.rs
crates/cubek-convolution/src/kernels/backward_weight/: args.rs  launch.rs  mod.rs
crates/cubek-convolution/src/kernels/forward/: args.rs  launch.rs  mod.rs
crates/cubek-convolution/tests/: lib.rs
crates/cubek-convolution/tests/suite/: convolution_test_launcher.rs  mod.rs
crates/cubek-convolution/tests/suite/test_macros/: launch.rs  suite.rs
crates/cubek-matmul/: Cargo.toml
crates/cubek-matmul/src/: base.rs
crates/cubek-matmul/src/components/: problem.rs  spec.rs
crates/cubek-matmul/src/components/global/: args.rs
crates/cubek-matmul/src/components/stage/: base.rs
crates/cubek-matmul/src/components/tile/: base.rs
crates/cubek-matmul/src/definition/: base.rs  spec.rs
crates/cubek-matmul/src/launch/: launch_naive.rs  launch_tiling.rs  mod.rs  select_kernel.rs  strategy.rs
crates/cubek-matmul/src/routines/: base.rs  double_buffering.rs  double_unit.rs  naive.rs  ordered_double_buffering.rs  simple.rs  simple_unit.rs  specialized.rs  vecmat.rs
crates/cubek-matmul/src/routines/selector/: plane.rs  unit.rs
crates/cubek-matmul/tests/: lib.rs
crates/cubek-matmul/tests/suite/: cpu_reference.rs  mod.rs  reference.rs
crates/cubek-matmul/tests/suite/layered/: matmul_test_launcher.rs  mod.rs  tma_test_launcher.rs
crates/cubek-matmul/tests/suite/naive/: macros.rs  mod.rs  suite.rs
crates/cubek-matmul/tests/suite/test_utils/: correctness.rs  cpu_reference.rs  mod.rs  raw_parts.rs  tensor.rs
crates/cubek-quant/: Cargo.toml
crates/cubek-quant/src/: dequantize.rs  quantize.rs
crates/cubek-quant/src/layout/: scales.rs
crates/cubek-reduce/: Cargo.toml  README.md
crates/cubek-reduce/src/: args.rs  config.rs  error.rs  launch.rs  lib.rs  precision.rs  primitives.rs  shared_sum.rs  strategy.rs
crates/cubek-reduce/src/components/: args.rs  config.rs  mod.rs  writer.rs
crates/cubek-reduce/src/components/global/: base.rs  cube.rs  mod.rs  plane.rs  unit.rs
crates/cubek-reduce/src/components/instructions/: argmax.rs  argmin.rs  base.rs  max.rs  maxabs.rs  mean.rs  min.rs  mixed.rs  prod.rs  sum.rs  utils.rs
crates/cubek-reduce/src/components/level/: base.rs  cube.rs  mod.rs  plane.rs  unit.rs
crates/cubek-reduce/src/components/partition/: base.rs  mod.rs  parallel.rs  perpendicular.rs
crates/cubek-reduce/src/components/readers/: base.rs  bound_checks.rs  cube.rs  mod.rs  parallel.rs  perpendicular.rs  plane.rs  unit.rs
crates/cubek-reduce/src/instructions/: argmax.rs  argmin.rs  base.rs  max.rs  maxabs.rs  mean.rs  min.rs  mixed.rs  prod.rs  sum.rs
crates/cubek-reduce/src/launch/: base.rs  info.rs  mod.rs  strategy.rs  tune_key.rs  utils.rs
crates/cubek-reduce/src/routines/: base.rs  blueprint.rs  cube.rs  mod.rs  plane.rs  reduce_dim.rs  unit.rs
crates/cubek-reduce/tests/suite/: base.rs  mod.rs  reduce_dim.rs  reduce_shared.rs  test_case.rs
crates/cubek-std/: Cargo.toml
crates/cubek-std/src/: lib.rs
crates/cubek-std/src/test_utils/: correctness.rs  mod.rs  test_mode.rs
crates/cubek-std/src/test_utils/test_tensor/: base.rs  batched_matrix.rs  cast.rs  eye.rs  mod.rs
crates/cubek-test-utils/: Cargo.toml
crates/cubek-test-utils/src/: lib.rs
crates/cubek-test-utils/src/correctness/: base.rs  color_printer.rs  mod.rs
crates/cubek-test-utils/src/test_mode/: base.rs
crates/cubek-test-utils/src/test_tensor/: arange.rs  base.rs  cast.rs  custom.rs  eye.rs  host_data.rs  mod.rs  random.rs  strides.rs  zeros.rs
crates/cubek-test-utils/tests/: lib.rs
crates/cubek-test-utils/tests/utils_suite/: mod.rs
crates/cubek/src/: lib.rs
(+87 files in other folders)
