[package]
authors = ["louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Attention Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-attention"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-attention"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]


[dependencies]
cubek-matmul = { path = "../cubek-matmul", version = "0.0.1", default-features = false }
cubek-random = { path = "../cubek-random", version = "=0.0.1", default-features = false }
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
cubek-std = { path = "../cubek-std", version = "=0.0.1", default-features = false }

bytemuck = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
trybuild = "1"
pretty_assertions = { workspace = true }
cubecl = { workspace = true, features = ["test-runtime"] }
