[package]
authors = ["Genna Wingert", "louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Convolution Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-convolution"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-convolution"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

conv_tests_all = [
    "conv_tests_plane",
    "conv_tests_tma",
    "conv_tests_simple",
    "conv_tests_cyclic",
    "conv_tests_strided",
    "conv_tests_tilewise",
    "conv_tests_async_copy",
    "conv_tests_swizzle",
    "conv_tests_f16",
    "conv_tests_f32",
    "conv_tests_mma",
]
conv_tests_async_copy = []
conv_tests_base = [
    "conv_tests_plane",
    "conv_tests_simple",
    "conv_tests_cyclic",
    "conv_tests_f16",
]
conv_tests_cyclic = []
conv_tests_f16 = []
conv_tests_f32 = []
conv_tests_mma = []
conv_tests_partition_buffering = []
conv_tests_plane = []
conv_tests_simple = []
conv_tests_strided = []
conv_tests_swizzle = []
conv_tests_tilewise = []
conv_tests_tma = []


[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
cubek-matmul = { path = "../cubek-matmul", default-features = false, version = "0.0.1" }
derive-new = { workspace = true }

bytemuck = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
cubek-random = { path = "../cubek-random", default-features = false, version = "0.0.1" }
pretty_assertions = { workspace = true }
trybuild = "1"
