[package]
authors = ["louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Matrix Multiplication Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-matmul"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-matmul"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

matmul_tests_mma = []
matmul_tests_plane = []
matmul_tests_tma = []
matmul_tests_unit = []
matmul_tests_vecmat = []

matmul_tests_double = []
matmul_tests_ordered = []
matmul_tests_simple = []

matmul_tests_cyclic = []
matmul_tests_hybrid = []
matmul_tests_strided = []
matmul_tests_tilewise = []

matmul_tests_barrier = []

matmul_tests_hypercube = []
matmul_tests_partition_buffering = []
matmul_tests_specialized = []

matmul_tests_f16 = []
matmul_tests_f32 = []

matmul_tests_alt_shapes = []
matmul_tests_layouts = []
matmul_tests_swizzle = []

matmul_tests_base = [
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_f16",
]


[dependencies]
cubek-random = { path = "../cubek-random", version = "=0.0.1", default-features = false }
cubek-reduce = { path = "../cubek-reduce", version = "=0.0.1", default-features = false }
cubek-std = { path = "../cubek-std", version = "=0.0.1", default-features = false }

bytemuck = { workspace = true }
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
trybuild = "1"
pretty_assertions = { workspace = true }
cubecl = { workspace = true, features = ["test-runtime"] }
