[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Quantization Library."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-quant"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-quant"
version.workspace = true

[features]
default = ["kernels"]
kernels = ["std"]
std = ["cubecl/std"]

[dependencies]
cubecl = { workspace = true }
cubecl-common = { workspace = true, features = ["fp8"] }

half.workspace = true
serde = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
