[package]
edition.workspace = true
license.workspace = true
name = "cubek-test-utils"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["cubecl/default", "tests"]
std = ["cubecl/std"]
tests = []

[dependencies]
cubek-random = { path = "../cubek-random", version = "=0.1.0-pre.1", default-features = false }

bytemuck = { workspace = true }
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
pretty_assertions = { workspace = true }
trybuild = "1"
