[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: CubeCL Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek"
version.workspace = true

[features]
default = [
    "std",
    "cubek-quant?/default",
    "cubek-random?/default",
    "cubek-reduce?/default",
    "cubek-matmul?/default",
    "cubek-convolution?/default",
    "cubek-attention?/default",
]

std = [
    "cubek-quant?/std",
    "cubek-random?/std",
    "cubek-reduce?/std",
    "cubek-matmul?/std",
    "cubek-convolution?/std",
    "cubek-attention?/std",
]

quantization = ["cubek-quant"]
random = ["cubek-random"]
reduce = ["cubek-reduce"]
matmul = ["cubek-matmul"]
convolution = ["cubek-convolution"]
attention = ["cubek-attention"]

[dependencies]
cubek-quant = { path = "../cubek-quant", version = "0.0.1", default-features = false, optional = true }
cubek-random = { path = "../cubek-random", version = "0.0.1", default-features = false, optional = true }
cubek-reduce = { path = "../cubek-reduce", version = "0.0.1", default-features = false, optional = true }
cubek-matmul = { path = "../cubek-matmul", version = "0.0.1", default-features = false, optional = true }
cubek-convolution = { path = "../cubek-convolution", version = "0.0.1", default-features = false, optional = true }
cubek-attention = { path = "../cubek-attention", version = "0.0.1", default-features = false, optional = true }
cubecl = { workspace = true }
